--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
@@ -9,6 +9,7 @@
     <div class="controls">
         <input type="text" id="automation-name" name="name"
                data-attr="name" required="required" value="<%= name %>"
+               autocomplete="off"
                data-validation="{&quot;NotNull&quot;:{&quot;message&quot;:&quot;This is a required field&quot;,&quot;payload&quot;:null}}" />
     </div>
 </div>
