DIAM-1572 fix status dropdown

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
@@ -19,8 +19,8 @@
     </div>
     <div class="controls">
         <select name="status" data-attr="status" id="automation-status">
-            <option value="1"<%= status == "1" ? ' selected' : ''%>>Active</option>
-            <option value="0"<%= status == "0" ? ' selected' : ''%>>Inactive</option>
+            <option value="1"<%= status == 1 ? ' selected' : ''%>>Active</option>
+            <option value="0"<%= status == 0 ? ' selected' : ''%>>Inactive</option>
         </select>
     </div>
 </div>
