--- a/src/Diamante/DeskBundle/Resources/views/Ticket/widget/massAssignee.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/widget/massAssignee.html.twig
@@ -14,6 +14,7 @@
             <form id="{{ form.vars.name }}" action="{{ path('diamante_ticket_mass_assign', {'no_redirect': true}) }}" method="post">
                 <fieldset class="form form-horizontal">
                     <input type="hidden" name="ids" value="{{ form.vars.value.ids }}" >
+                    <input type="hidden" name="inset" value="{{ form.vars.value.inset }}" >
                     {{ form_row(form.assignee) }}
                     <div class="widget-actions form-actions">
                         <button class="btn" type="reset">{{ 'diamante.desk.ui.cancel'|trans }}</button>
