--- a/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Entity/Notification/notification.html.twig
@@ -33,11 +33,13 @@
                                 <tr>
                                     <td style="color: #A09F9F; font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; white-space: nowrap; vertical-align: top;" valign="top">{{ key|ucfirst }}</td>
                                     <td style="font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; vertical-align: top;" valign="top">
+                                        {% autoescape false %}
                                         {% if old is not null %}
-                                            <del>{{ old|striptags|ucfirst }}</del><br />{{ new|striptags|ucfirst }}
+                                            <del>{{ old|ucfirst }}</del><br />{{ new|ucfirst }}
                                         {% else %}
-                                            {{ new|striptags|ucfirst }}
+                                            {{ new|ucfirst }}
                                         {% endif %}
+                                        {% endautoescape %}
                                     </td>
                                 </tr>
                                 {% endif %}
