--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-edit-template.ejs
@@ -10,6 +10,7 @@
 <% var entity_type = typeof entity_type !== 'undefined' && entity_type; %>
 <% var type = typeof type !== 'undefined' && type; %>
 <% var value = typeof value !== 'undefined' && value; value = value ? value : ''; %>
+<% var rule_type = isBusiness ? 'business' : 'workflow'; %>
 <div class="controls">
     <span class="label">If</span>
     <label for="automation-target" class="value"><%= entities[entity].label %></label>
@@ -30,7 +31,9 @@
             <span class="label">Property</span>
             <select name="conditions[property]" data-attr="property" data-rel-attr="value,type">
                 <% for(var key in properties) { %>
-                <option value="<%= key %>"<%= key == property ? ' selected' : ''%>><%= properties[key].label %></option>
+                    <% if(_.contains(properties[key].rules, rule_type)) { %>
+                        <option value="<%= key %>"<%= key == property ? ' selected' : ''%>><%= properties[key].label %></option>
+                    <% } %>
                 <% } %>
             </select>
             <select name="conditions[type]" data-attr="type" data-rel-attr="value">
