DIAM-1708 hide comment target for business rule

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
@@ -46,7 +46,11 @@
     <div class="controls">
         <select name="target" data-attr="target" id="automation-target">
             <% for(var key in entities) { %>
-            <option value="<%= key %>"<%= key == target ? ' selected' : ''%>><%= entities[key].label %></option>
+                <% if (isBusiness && 'comment' == key) {%>
+                    <% continue; %>
+                <% } %>
+
+                <option value="<%= key %>"<%= key == target ? ' selected' : ''%>><%= entities[key].label %></option>
             <% } %>
         </select>
     </div>
