DIAM-1634 update users list format

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
@@ -22,7 +22,7 @@
             <% } else if (properties[property].frontend_options){ %>
                 <strong class="value">
                     <% if (properties[property].type == 'user'){ %>
-                    <%= properties[property].frontend_options[value].email %>
+                    <%= properties[property].frontend_options[value] %>
                     <% } else { %>
                     <%= properties[property].frontend_options[value] %>
                     <% } %>
