--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-template.ejs
@@ -26,7 +26,7 @@
                 <% } else if (properties[property].frontend_options){ %>
                     <strong class="value">
                         <% if (property_type == 'user'){ %>
-                        <%= properties[property].frontend_options[value].email %>
+                        <%= properties[property].frontend_options[value] %>
                         <% } else { %>
                         <%= properties[property].frontend_options[value] %>
                         <% } %>
