DIAM-1725 Need to update email template for Ticket was removed notification

--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.html.twig
@@ -67,10 +67,10 @@
                     </tr>
                     <tr>
                         <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
-                            <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 35px 0 0;">
-                                Thank you,
-                                <br />
-                                {{ organization }}
+                            <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 15px 0 0;">
+                                Thank you.</p>
+                            <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px;">
+                                Support Team
                             </p>
                         </td>
                     </tr>
