--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.txt.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.txt.twig
@@ -20,5 +20,5 @@ You can view this ticket using following link {{ render_ticket_url(ticketKey, re
 Thank you.
 
 --
-{{ organization }}
+Support Team
 
