DIAM-1779 fix conditions label

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-template.ejs
@@ -35,6 +35,6 @@
             <% } %>
         <% } %>
     <% } else { %>
-        <strong class="value"><%= conditions[entity_type] %></strong>
+        <strong class="value"><%= conditions[entity_type].label %></strong>
     <% } %>
 </div>
