DIAM-1642 When ticket was updated by admin, in update email notification is displayed the name of reporter

--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/ticketUpdated.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/ticketUpdated.html.twig
@@ -1,5 +1,5 @@
 {% extends format == 'html' ? "@DiamanteDesk/Automation/Notification/notification.html.twig" : "@DiamanteDesk/Automation/Notification/notification.txt.twig" %}
 
 {% block header %}
-    Ticket {{ ticketKey }} has been updated by {{ user }}.
+    Ticket {{ ticketKey }} has been updated by {{ editor }}.
 {% endblock %}
