--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/ticketRemoved.txt.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/ticketRemoved.txt.twig
@@ -1,7 +1,7 @@
 {% extends format == 'html' ? "@DiamanteDesk/Automation/Notification/notification.html.twig" : "@DiamanteDesk/Automation/Notification/notification.txt.twig" %}
 
 {% block header %}
-    Ticket {{ ticketKey }}: {{ ticketSubject }} has been deleted by {{ user }}.
+    Ticket {{ ticketKey }}: {{ ticketSubject }} has been deleted by {{ editor }}.
 {% endblock %}
 
 {% block info %}{% endblock %}
