DIAM-1783 Changed style in messages

--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/commentUpdated.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/commentUpdated.html.twig
@@ -1,5 +1,5 @@
 {% extends format == 'html' ? "@DiamanteDesk/Automation/Notification/notification.html.twig" : "@DiamanteDesk/Automation/Notification/notification.txt.twig" %}
 
 {% block header %}
-    Comment was updated by {{ editor }}
+    Comment was updated by {{ editor }}.
 {% endblock %}
