--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.txt.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.txt.twig
@@ -6,7 +6,7 @@ You can view this ticket using following link {{ render_ticket_url(ticketKey, re
 
 {% if changes is defined %}
     {% for key, value in changes %}
-        - {{ key|ucfirst }}: {{ attribute(value, 'new')|striptags|ucfirst }}
+        - {{ key|ucfirst }}: {{ attribute(value, 'new')|striptags }}
     {% endfor %}
 {% endif %}
 
