DIAM-1792 fix reporter name in email header

--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/commentCreated.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/commentCreated.html.twig
@@ -1,5 +1,5 @@
 {% extends format == 'html' ? "@DiamanteDesk/Automation/Notification/notification.html.twig" : "@DiamanteDesk/Automation/Notification/notification.txt.twig" %}
 
 {% block header %}
-    Comment was created by {{ user }}.
+    Comment was created by {{ editor }}.
 {% endblock %}
