--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.html.twig
@@ -21,7 +21,7 @@
                         <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                             <h1 style="font-size: 14px; font-weight: 200; margin: 0 0 25px;">
                             {% block header %}
-                                {{ user }}
+                                {{ editor }}
                             {% endblock %}
                             </h1>
 
