--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.txt.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/notification.txt.twig
@@ -1,6 +1,6 @@
 {{ delimiter }}
 
-Ticket was created by {{ user }}
+Ticket was created by {{ editor }}
 
 You can view this ticket using following link {{ render_ticket_url(ticketKey, recipient) }}
 
