--- a/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/ticketCreated.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Automation/Notification/Entity/ticketCreated.html.twig
@@ -1,6 +1,6 @@
 {% extends format == 'html' ? "@DiamanteDesk/Automation/Notification/notification.html.twig" : "@DiamanteDesk/Automation/Notification/notification.txt.twig" %}
 
 {% block header %}
-    Ticket {{ ticketKey }} has been created by {{ user }}.
+    Ticket {{ ticketKey }} has been created by {{ editor }}.
 {% endblock %}
 
