DIAM-1752 add logic if oro user was removed

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
@@ -44,6 +44,9 @@
             <span class="label">To: </span>
             <select name="actions[value][<%= index %>]" data-attr="value">
                 <% for(var key in properties[property].frontend_options) { %>
+                <% if ('property_removed' == key) { %>
+                <% continue; %>
+                <% } %>
                 <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
                     <% if (properties[property].type == 'user'){ %>
                     <%= actions[type].frontend_options[key] %>
