--- a/src/Diamante/DeskBundle/Resources/views/Ticket/create.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/create.html.twig
@@ -1,6 +1,7 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
+{% import 'DiamanteDeskBundle:Ticket:macros.html.twig' as Helper %}
 {% form_theme form with ['OroFormBundle:Form:fields.html.twig', 'OroTagBundle:Form:fields.html.twig'] %}
-{% set formAction = path('diamante_ticket_create')  %}
+{% set formAction = path('diamante_ticket_create') %}
 {% block head_script %}
     {{ parent() }}
 
@@ -29,41 +30,43 @@
     {% set id = 'ticketDetails' %}
 
     {% set dataBlocks = [{
-        'title': 'diamante.desk.common.general'|trans,
-        'class': 'active',
-        'subblocks': [
-            {
-                'title': 'diamante.desk.ticket.details'|trans,
-                'data': [
-                    form_row(form.branch),
-                    form_row(form.subject),
-                    form_row(form.status),
-                    form_row(form.priority),
-                    form_row(form.source),
-                    form_row(form.reporter),
-                    form_row(form.assignee),
-                    form_row(form.attachmentsInput),
-                    form_row(form.tags)
-                ]
-            }
-        ]
+    'title': 'diamante.desk.common.general'|trans,
+    'class': 'active',
+    'subblocks': [
+    {
+    'title': 'diamante.desk.ticket.details'|trans,
+    'data': [
+    form_row(form.branch),
+    form_row(form.subject),
+    form_row(form.status),
+    form_row(form.priority),
+    form_row(form.source),
+    form_row(form.reporter),
+    form_row(form.assignee),
+    form_row(form.attachmentsInput),
+    form_row(form.tags)
+    ]
+    }
+    ]
     }] %}
 
     {% set dataBlocks = dataBlocks|merge([{
-        'title' : 'diamante.desk.common.description'|trans,
-        'subblocks': [
-            {
-                'title' : null,
-                'data' : [
-                    form_row(form.description)
-                ]
-            }]
-        }]
+    'title' : 'diamante.desk.common.description'|trans,
+    'subblocks': [
+    {
+    'title' : null,
+    'data' : [
+    form_row(form.description)
+    ]
+    }]
+    }]
     ) %}
 
     {% set data = {
-        'formErrors': form_errors(form)? form_errors(form) : null,
-        'dataBlocks': dataBlocks,
+    'formErrors': form_errors(form)? form_errors(form) : null,
+    'dataBlocks': dataBlocks,
     } %}
     {{ parent() }}
+
+    {{ Helper.scrollToDesctiption() }}
 {% endblock content_data %}
