--- a/src/Diamante/DeskBundle/Resources/views/Ticket/update.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/update.html.twig
@@ -1,4 +1,5 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
+{% import 'DiamanteDeskBundle:Ticket:macros.html.twig' as Helper %}
 {% form_theme form with ['OroFormBundle:Form:fields.html.twig', 'OroTagBundle:Form:fields.html.twig'] %}
 {% oro_title_set({params : {"%ticket.subject%": form.vars.value.subject }}) %}
 {% set formAction = path('diamante_ticket_update', { 'key': form.vars.value.key }) %}
@@ -73,4 +74,6 @@
         'dataBlocks': dataBlocks,
     } %}
     {{ parent() }}
+
+    {{ Helper.scrollToDesctiption() }}
 {% endblock content_data %}
