loose coupling code for ticket description scroll

--- a/src/Diamante/DeskBundle/Resources/views/Ticket/create.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/create.html.twig
@@ -68,5 +68,5 @@
     } %}
     {{ parent() }}
 
-    {{ Helper.scrollToDesctiption() }}
+    {{ Helper.scrollToDesctiption(form.description.vars.id) }}
 {% endblock content_data %}
