--- a/src/Diamante/DeskBundle/Resources/views/Ticket/update.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/update.html.twig
@@ -75,5 +75,5 @@
     } %}
     {{ parent() }}
 
-    {{ Helper.scrollToDesctiption() }}
+    {{ Helper.scrollToDesctiption(form.description.vars.id) }}
 {% endblock content_data %}
