--- a/src/Diamante/FrontBundle/Resources/views/index.html.twig
+++ b/src/Diamante/FrontBundle/Resources/views/index.html.twig
@@ -37,7 +37,12 @@
     <section id="main" class="container">
         <div id="messages"></div>
         <div id="content">
-            <div class="loader"><div><i class="fa fa-cog fa-spin"></i> <strong>Loading...</strong></div></div>
+            <div class="loader">
+                <div>
+                    <i class="fa fa-cog fa-spin"></i>
+                    <strong>{% trans %}Loading...{% endtrans %}</strong>
+                </div>
+            </div>
         </div>
     </section>
     <footer id="footer"></footer>
@@ -64,6 +69,9 @@
                 logo : '{{ basePath }}/bundles/diamantefront/img/logo.png',
                 title : 'DiamanteDesk'
             }
+        },
+        paths: {
+            'translations' : '{{ url('diamante_front_jstranslation')[0:-3] }}'
         }
     });
 </script>
