--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -3,21 +3,25 @@
 </a>
 <form role="form">
     <div class="form-group">
-        <label class="control-label" for="first_name">First Name</label>
-        <input type="text" class="form-control input-lg" id="first_name" name="first_name" placeholder="Enter First Name">
+        <label class="control-label" for="first_name"><%= __('diamante_front.session.template.label.first_name') %></label>
+        <input type="text" class="form-control input-lg" id="first_name" name="first_name" tabindex="1"
+               placeholder="<%= __('diamante_front.session.template.placeholder.first_name') %>">
     </div>
     <div class="form-group">
-        <label class="control-label" for="last_name">Last Name</label>
-        <input type="text" class="form-control input-lg" id="last_name" name="last_name" placeholder="Enter Last Name">
+        <label class="control-label" for="last_name"><%= __('diamante_front.session.template.label.last_name') %></label>
+        <input type="text" class="form-control input-lg" id="last_name" name="last_name" tabindex="2"
+               placeholder="<%= __('diamante_front.session.template.placeholder.last_name') %>">
     </div>
     <div class="form-group required">
-        <label class="control-label" for="email">Email</label>
-        <input type="email" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
+        <label class="control-label" for="email"><%= __('diamante_front.session.template.label.email') %></label>
+        <input type="email" class="form-control input-lg" id="email" name="email" tabindex="3"
+               placeholder="<%= __('diamante_front.session.template.placeholder.email') %>">
     </div>
     <div class="form-group required">
-        <label class="control-label" for="password">Password</label>
-        <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Enter Password">
+        <label class="control-label" for="password"><%= __('diamante_front.session.template.label.password') %></label>
+        <input type="password" class="form-control input-lg" name="password" id="password" tabindex="4"
+               placeholder="<%= __('diamante_front.session.template.placeholder.password') %>">
     </div>
-    <p>Already have an account? &mdash; <a href="#login">Sign in</a></p>
-    <p><button type="submit" class="btn btn-primary btn-lg js-submit">Continue</button></p>
+    <p><%= __('diamante_front.session.template.back.register', {url: '#login'}) %></p>
+    <p><button type="submit" class="btn btn-primary btn-lg js-submit" tabindex="5"><%= __('diamante_front.session.template.button.register') %></button></p>
 </form>
