--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Footer/templates/footer.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Footer/templates/footer.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-6 copyright small">
-    <%= __('diamante.front.footer.copyright', {
+    <%= __('diamante_front.footer.template.copyright', {
       license : '<a href="http://opensource.org/licenses/osl-3.0.php">OSL 3.0</a>',
       company : '<a href="http://eltrino.com">Eltrino LLC</a>'
     }) %>
