--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Header/templates/header.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Header/templates/header.ejs
@@ -5,7 +5,7 @@
   </a>
   <div class="col-sm-3 header-create-ticket">
     <div class="create-ticket form-group form-group-lg">
-      <a href="#" class="btn js-create-ticket"><%= __('diamante.front.header.new_ticket') %></a>
+      <a href="#" class="btn js-create-ticket"><%= __('diamante_front.header.template.new_ticket') %></a>
     </div>
   </div>
   <div class="col-sm-4 header-search">
