--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/modal.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/modal.ejs
@@ -1,14 +1,14 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only"><%= __('diamante_front.common.template.close') %></span></button>
             <h4 class="modal-title"><%= title %></h4>
         </div>
         <div class="modal-body">
 
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><%= __('diamante_front.common.template.cancel') %></button>
             <button type="button" class="btn btn-primary js-save-btn"><%= submit %></button>
         </div>
     </div><!-- /.modal-content -->
