--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/pagination.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/pagination.ejs
@@ -1,3 +1,3 @@
-<div class="sortby-label visible-xs-block">Sort By</div>
+<div class="sortby-label visible-xs-block"><%= __('diamante_front.common.template.sort') %></div>
 <div class="js-pagination-main"></div>
 <div class="pagination-wrapper js-pagination-pager"></div>
