--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Common/templates/loader.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Common/templates/loader.ejs
@@ -1,1 +1,1 @@
-<div><i class="fa fa-cog fa-spin"></i> <strong>Loading...</strong></div>
+<div><i class="fa fa-cog fa-spin"></i> <strong><%= __('Loading...') %></strong></div>
