--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Attachment/templates/dropzone.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Attachment/templates/dropzone.ejs
@@ -1,15 +1,15 @@
-<label class="dropzone-label hidden-xs" for="dropzone-input">Drop files here to attach</label>
-<label class="dropzone-label visible-xs" for="dropzone-input">Click here to attach files</label>
+<label class="dropzone-label hidden-xs" for="dropzone-input"><%= __('diamante_front.attachment.template.dropzone.dropfiles') %></label>
+<label class="dropzone-label visible-xs" for="dropzone-input"><%= __('diamante_front.attachment.template.dropzone.attachfiles') %></label>
 <input type="file" name="attachmentsInput[]" class="dropzone-input" multiple />
 <div class="progress dropzone-progress dropzone-progress-reading">
   <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-  <span class="dropzone-progress-label"><i class="fa fa-cog fa-spin"></i> Reading... </span>
+  <span class="dropzone-progress-label"><i class="fa fa-cog fa-spin"></i> <%= __('diamante_front.attachment.template.dropzone.read') %> </span>
 </div>
 <div class="progress dropzone-progress dropzone-progress-sending">
   <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-  <span class="dropzone-progress-label"><i class="fa fa-cog fa-spin"></i> Sending... </span>
+  <span class="dropzone-progress-label"><i class="fa fa-cog fa-spin"></i> <%= __('diamante_front.attachment.template.dropzone.send') %> </span>
 </div>
 <div class="progress dropzone-progress dropzone-progress-receiving">
   <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-  <span class="dropzone-progress-label"><i class="fa fa-cog fa-spin"></i> Receiving... </span>
+  <span class="dropzone-progress-label"><i class="fa fa-cog fa-spin"></i> <%= __('diamante_front.attachment.template.dropzone.receive') %> </span>
 </div>
