--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Attachment/templates/layout.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Attachment/templates/layout.ejs
@@ -1,4 +1,4 @@
-<h2>File Attachments</h2>
+<h2><%= __('diamante_front.attachment.template.header.file') %></h2>
 <div id="attachments-list">
 
 </div>
