--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/empty-view.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/empty-view.ejs
@@ -1,1 +1,1 @@
-<div class="alert alert-danger" role="alert">This ticket doesn't exist!</div>
+<div class="alert alert-danger" role="alert"><%= __('diamante_front.ticket.template.empty_view') %></div>
