--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/list.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/list.ejs
@@ -1,10 +1,10 @@
 <thead>
   <tr>
-    <th class="key sortable"><%= sorterState('key') %> <span>Key</span></th>
-    <th class="createdAt sortable"><%= sorterState('createdAt') %> <span>Date</span></th>
-    <th class="subject sortable"><%= sorterState('subject') %> <span>Subject</span></th>
-    <th class="priority sortable"><%= sorterState('priority') %> <span>Priority</span></th>
-    <th class="status sortable"><%= sorterState('status') %> <span>Status</span></th>
+    <th class="key sortable"><%= sorterState('key') %> <span><%= __('diamante_front.ticket.template.list.key') %></span></th>
+    <th class="createdAt sortable"><%= sorterState('createdAt') %> <span><%= __('diamante_front.ticket.template.list.date') %></span></th>
+    <th class="subject sortable"><%= sorterState('subject') %> <span><%= __('diamante_front.ticket.template.list.subject') %></span></th>
+    <th class="priority sortable"><%= sorterState('priority') %> <span><%= __('diamante_front.ticket.template.list.priority') %></span></th>
+    <th class="status sortable"><%= sorterState('status') %> <span><%= __('diamante_front.ticket.template.list.status') %></span></th>
   </tr>
 </thead>
 <tbody></tbody>
