--- a/src/Diamante/FrontBundle/Resources/public/js/modules/User/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/User/templates/form.ejs
@@ -3,27 +3,27 @@
     <img src="<%=avatar_url %>?s=100&d=identicon" class="user-image" alt="<%=first_name %> <%=last_name %>" />
   </div>
   <div class="form-group">
-    <label class="control-label" for="first_name">First Name</label>
+    <label class="control-label" for="first_name"><%= __('diamante_front.user.template.form.first_name_label') %></label>
     <input type="text" class="form-control"
            id="first_name" name="first_name"
            value="<%= first_name %>">
   </div>
   <div class="form-group">
-    <label class="control-label" for="last_name">Last Name</label>
+    <label class="control-label" for="last_name"><%= __('diamante_front.user.template.form.last_name_label') %></label>
         <input type="text" class="form-control"
                id="last_name" name="last_name"
                value="<%= last_name %>">
   </div>
     <div class="form-group">
-        <label class="control-label" for="email">Email</label>
+        <label class="control-label" for="email"><%= __('diamante_front.user.template.form.email_label') %></label>
         <input type="text" class="form-control"
                id="email" name="email"
                value="<%= email %>" readonly>
     </div>
   <div class="form-group">
-    <label class="control-label" for="last_name">New Password</label>
+    <label class="control-label" for="last_name"><%= __('diamante_front.user.template.form.password_label') %></label>
     <input type="password" class="form-control"
            id="password" name="password">
   </div>
-  <button type="submit" class="btn btn-primary btn-block js-submit hidden">Submit</button>
+  <button type="submit" class="btn btn-primary btn-block js-submit hidden"><%= __('diamante_front.user.template.form.submit_button') %></button>
 </form>
