[DIAM-1824] Translate Watcher module

--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Watcher/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Watcher/templates/form.ejs
@@ -1,11 +1,11 @@
 <form action="/" role="form">
   <div class="form-group required">
-    <label class="control-label" for="email">Watcher Email</label>
+    <label class="control-label" for="email"><%= __('diamante_front.watcher.template.email_watcher') %></label>
     <input type="text"
            class="form-control"
            id="email"
            name="email"
-           placeholder="Watcher Email"
+           placeholder="<%= __('diamante_front.watcher.template.email_watcher') %>"
            value="">
   </div>
 </form>
