--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Watcher/templates/item.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Watcher/templates/item.ejs
@@ -1,1 +1,1 @@
-<a href="mailto:<%= email %>"><%= username %></a><button class="btn btn-link js-watcher-delete" title="Remove Watcher"><i class="fa fa-times"></i></button>
+<a href="mailto:<%= email %>"><%= username %></a><button class="btn btn-link js-watcher-delete" title="<%= __('diamante_front.watcher.template.remove_watcher') %>"><i class="fa fa-times"></i></button>
