[DIAM-1824] Translate User module in assets folder

--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/User/templates/user.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/User/templates/user.ejs
@@ -10,7 +10,8 @@
       </a>
     </li>
     <li class="user-action">
-      <a href="#" class="user-logout js-logout" title="Log Out"><i class="fa fa-power-off"></i></a>
+      <a href="#" class="user-logout js-logout" title="<%= __('diamante_front.user.template.logout') %>"><i class="fa fa-power-off"></i></a>
     </li>
   </ul>
 </div>
+
